--- a/js_nodes.html
+++ b/js_nodes.html
@@ -20,6 +20,7 @@
 
     <link href="js_base.css" rel="stylesheet" />
     <link href="js_layout.css" rel="stylesheet" />
+    <link rel="stylesheet" href="js_tree.css" />
 
 </head>
 
